<resources>
    <string name="app_name">Cek Apel</string>
    <string name="title_home">Beranda</string>
    <string name="title_scan">Scan</string>
    <string name="title_article">Artikel</string>
    <string name="title_settings">Pengaturan</string>

    <string name="register">Daftar</string>
    <string name="email">Email</string>
    <string name="password">Kata Sandi</string>
    <string name="confirm_password">Konfirmasi Kata Sandi</string>
    <string name="account_confirmation_login">Apakah kamu sudah punya akun?</string>

    <string name="login">Masuk</string>
    <string name="forgot_password">Lupa Password?</string>
    <string name="login_option">Atau lanjutkan dengan</string>
    <string name="account_confirmation_register">Apakah kamu belum punya akun?</string>

    <string name="articles">Artikel</string>

    <string name="username">Nama</string>
    <string name="useremail">example@gmail.com</string>
    <string name="account_settings">Pengaturan Akun</string>
    <string name="edit_profile">Edit Profil</string>
    <string name="daily_notifications">Pemberitahuan</string>
    <string name="logout">Keluar</string>

    <string name="welcome">Selamat Datang!</string>
    <string name="scanning_apple_leaves">Scan Daun Apel</string>
    <string name="latest_articles">Artikel Terbaru</string>

    <string name="article_detail">Detail Artikel</string>
    <string name="article_title_goes_here">Judul Artikel Ada Disini</string>
    <string name="disease_decryption_goes_here">Dekripsi Penyakit Ada Disini</string>
    <string name="disease_handling_decryption_goes_here">Deskripsi Penanganan Penyakit Ada Disini</string>
    <string name="share">Bagikan</string>

    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>

    <string name="about">Tentang Kami</string>
    <string name="app_version">Version 1.0.0</string>
    <string name="about_our_app">Tentang Aplikasi Kami</string>
    <string name="about_our_app_text">Cek Apel adalah aplikasi mobile yang dirancang untuk membantu petani apel di Indonesia mengatasi penyakit tanaman secara efektif. Dengan memanfaatkan teknologi pengenalan gambar canggih, aplikasi ini memungkinkan pengguna untuk mengambil atau mengunggah foto daun apel untuk mendeteksi penyakit dengan cepat dan akurat. Aplikasi ini juga menyediakan rekomendasi khusus untuk pencegahan dan pengobatan, sehingga petani dapat mengambil tindakan tepat waktu untuk melindungi tanaman mereka.

&#10;&#10;Selain fitur deteksinya, Cek Apel juga memberikan berita dan artikel terbaru tentang kesehatan apel, menawarkan wawasan praktis dan strategi untuk mengelola kesehatan tanaman. Dengan Cek Apel, petani dapat meningkatkan produktivitas, meminimalkan kerugian, dan berkontribusi pada sektor pertanian yang lebih berkelanjutan.</string>

    <string name="contact_information">Informasi Kontak</string>
    <string name="contact_email">Email: cekapel.capstone@gmail.com</string>
    <string name="copyright">© 2024 Cek Apel</string>


    <string name="title_menu_1">Selamat Datang di Aplikasi Cek Apel</string>
    <string name="title_menu_2">Deteksi Penyakit Daun Apel</string>
    <string name="title_menu_3">Beragam Artikel Informatif</string>
    <string name="title_menu_4">Mulai lindungi Apel Anda</string>

    <string name="desc_menu_1">Kenali penyakit pada apel dengan mudah dan cepat!</string>
    <string name="desc_menu_2">Unggah foto daun apel, dan kami akan mendeteksi penyakitnya!</string>
    <string name="desc_menu_3">Baca artikelnya, jaga apelnya!</string>
    <string name="desc_menu_4">Klik tombol dibawah ya!</string>

    <string name="check_now">Cek Apel Sekarang</string>

    <string name="email_invalid">Format email tidak valid</string>
    <string name="password_short">Kata sandi setidaknya 6 karakter</string>
    <string name="img_cant_found">Gambar tidak ditemukan</string>
    <string name="camera_permission">Ijin kamera diperlukan untuk melanjutkan proses</string>
    <string name="uri_photo_fail">Gagal mendapatkan URI foto</string>
    <string name="img_empty">Masukkan gambar terlebih dahulu</string>

    <string name="name">Nama</string>
    <string name="change_photo">Ganti Foto</string>
    <string name="save_profile">Simpan Profil</string>

    <string name="description">Deskripsi</string>
    <string name="suggestions">Saran</string>
    <string name="medicine">Pengobatan</string>

    <string name="illustration">Ilustrasi</string>
    <string name="reset">Kirim Tautan Reset</string>

    <string name="empty_scan_history">Tidak Ada Riwayat Scan</string>

    <string name="empty_article">Tidak Ada Artikel Yang Tersedia</string>

    <string name="scan_result">Hasil Scan</string>
    <string name="scan_date">Tanggal Scan</string>
    <string name="delete_scan_history">Hapus Riwayat Scan</string>
    <string name="detail_view">Lihat Detail</string>

    <string name="history">Riwayat</string>

    <string name="logout_confirmation_title">Keluar</string>
    <string name="logout_confirmation_message">Anda yakin ingin keluar?</string>
    <string name="yes">Iya</string>
    <string name="no">Tidak</string>

    <string name="forgot_password_description">Masukkan email Anda untuk menerima tautan reset password</string>

    <string name="your_web_client_id">488538856877-2vos3r4eanhnoitmjs26rs6cusnvsgqm.apps.googleusercontent.com</string>
</resources>