<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="bangkit.mobiledev.cek_apel.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_home_to_scan"
            app:destination="@id/navigation_scan"
            app:popUpTo="@id/navigation_home"
            app:popUpToInclusive="false" />
        <action
            android:id="@+id/action_home_to_article"
            app:destination="@id/navigation_article"
            app:popUpTo="@id/navigation_home"
            app:popUpToInclusive="false" />
    </fragment>

    <fragment
        android:id="@+id/navigation_scan"
        android:name="bangkit.mobiledev.cek_apel.ui.scan.ScanFragment"
        android:label="@string/title_scan"
        tools:layout="@layout/fragment_scan" />

    <fragment
        android:id="@+id/navigation_article"
        android:name="bangkit.mobiledev.cek_apel.ui.article.ArticleFragment"
        android:label="@string/title_article"
        tools:layout="@layout/fragment_article" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="bangkit.mobiledev.cek_apel.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>