<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".login.LoginActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:indeterminate="true"
        android:indeterminateTint="@color/green"
        android:elevation="4dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/logoImage"
                android:layout_width="200dp"
                android:layout_height="190dp"
                android:src="@drawable/login"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:contentDescription="@string/illustration"/>

            <TextView
                android:id="@+id/appTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/orbitron"
                android:text="@string/login"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsr"
                android:text="@string/email"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginBottom="1dp"
                android:layout_gravity="start" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="1dp">
                <bangkit.mobiledev.cek_apel.custom_view.EmailEditText
                    android:id="@+id/emailInput"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@drawable/rounded"
                    android:inputType="textEmailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsr"
                android:text="@string/password"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginBottom="1dp"
                android:layout_gravity="start" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:endIconMode="password_toggle"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="1dp">
                <bangkit.mobiledev.cek_apel.custom_view.PasswordEditText
                    android:id="@+id/passwordInput"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@drawable/rounded"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/forgotPasswordText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsb"
                android:text="@string/forgot_password"
                android:textColor="@color/green"
                android:textStyle="bold"
                android:layout_gravity="end"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="24dp" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="16sp"
                android:fontFamily="@font/poppinsb"
                android:text="@string/login"
                android:background="@drawable/rounded"
                android:textColor="#FFF"
                android:textStyle="bold"
                android:layout_marginBottom="25dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginBottom="20dp">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppinsr"
                    android:text="@string/login_option"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:layout_marginHorizontal="8dp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@color/black" />
            </LinearLayout>

            <com.google.android.gms.common.SignInButton
                android:id="@+id/signInButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppinsr"
                    android:text="@string/account_confirmation_register"
                    android:textColor="#000" />
                <TextView
                    android:id="@+id/registerLink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppinsb"
                    android:text="@string/register"
                    android:textColor="#4CAF50"
                    android:layout_marginStart="3dp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>